[package]
name = "influxdb-client"
version = "0.1.0"
edition = "2021"

[dependencies]

logger = { git = "https://github.com/stevenleadbeater/logger.git" }
actix-cors = "0.7.0"
actix-rt = "2.8.0"
actix-test = "0.1.1"
actix-web = "4.3.1"
dyn-clone = "1.0.4"
log = "0.4.8"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"